outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-21_23-21-44/evaluations/problem_eval-1233284736268967833_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance and destination distance based on the number of remaining unvisited nodes, favoring immediate distance in early stages and balancing both in later stages, while also incorporating a small random perturbation to avoid deterministic paths.}
                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance and destination distance based on the number of remaining unvisited nodes, favoring immediate distance in early stages and balancing both in later stages, while also incorporating a small random perturbation to avoid deterministic paths.}
                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
